kubernetes-volumes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homework-deployment
  namespace: homework
spec:
  replicas: 3
  selector:
    matchLabels:
      app: homework-pod
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: homework-pod
    spec:
      volumes:
        - name: shared-volume
          persistentVolumeClaim:
            claimName: homework-pvc
        - name: nginx-config
          configMap:
            name: nginx-config
        - name: homework-config
          configMap:
            name: homework-configmap
      containers:
        - name: web-server
          image: nginx
          ports:
            - containerPort: 80
          volumeMounts:
            - name: shared-volume
              mountPath: /homework
            - name: nginx-config
              mountPath: /etc/nginx/conf.d
            - name: homework-config
              mountPath: /homework/conf
          lifecycle:
            preStop:
              exec:
                command: ["/bin/sh", "-c", "rm /homework/index.html"]
          readinessProbe:
            exec:
              command: ["test", "-f", "/homework/index.html"]
            initialDelaySeconds: 5
            periodSeconds: 5
      restartPolicy: Always
